package com.sgma.loan.enums;


public enum PaymentDuration {
    MONTHLY, QUARTERLY, YEARLY
}
