package com.sgma.loan.enums;


public enum ReceptionMethod {
     ONLINE, ON_AGENCY
}
