package com.sgma.loan.enums;


public enum Status {
    PENDING, APPROVED, REJECTED
}
