package com.sgma.loan.enums;


public enum Type {
    PERSONAL, HOME, AUTO, EDUCATIONAL
}
